--- a/Pipfile
+++ b/Pipfile
@@ -22,12 +22,13 @@ Flask-JWT-Extended = "==3.24.1"
 email-validator = "*"
 Flask-Migrate = "==2.5.3"
 Flask-Login = "==0.5.0"
-alembic = "==1.4.3"
+alembic = "*"
 python-dateutil = "==2.8.1"
 python-editor = "==1.0.4"
 Mako = "==1.1.3"
 PyJWT = "==1.7.1"
 requests = "*"
+psycopg2-binary = "*"
 
 [dev-packages]
 psycopg2-binary = "==2.8.6"
